// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an object widget component with clicks on each tab in root level to load all of them 1`] = `
<DocumentFragment>
  <div>
    <div
      class="ui attached tabular menu"
    >
      <a
        class="active item"
      >
        Internal
      </a>
      <a
        class="item"
      >
        External
      </a>
      <a
        class="item"
      >
        Email
      </a>
    </div>
    <div
      class="ui bottom attached segment active tab"
    >
      <div
        class="mocked-default-widget"
        id="mocked-field-internal_link-0-my-widget"
      >
        Internal link - No description
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders an object widget component with clicks on each tab in root level to load all of them 2`] = `
<DocumentFragment>
  <div>
    <div
      class="ui attached tabular menu"
    >
      <a
        class="item"
      >
        Internal
      </a>
      <a
        class="active item"
      >
        External
      </a>
      <a
        class="item"
      >
        Email
      </a>
    </div>
    <div
      class="ui bottom attached segment active tab"
    >
      <div
        class="mocked-default-widget"
        id="mocked-field-external_link-0-my-widget"
      >
        External URL (can be relative within this site or absolute if it starts with http:// or https://) - No description
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders an object widget component with clicks on each tab in root level to load all of them 3`] = `
<DocumentFragment>
  <div>
    <div
      class="ui attached tabular menu"
    >
      <a
        class="item"
      >
        Internal
      </a>
      <a
        class="item"
      >
        External
      </a>
      <a
        class="active item"
      >
        Email
      </a>
    </div>
    <div
      class="ui bottom attached segment active tab"
    >
      <div
        class="mocked-default-widget"
        id="mocked-field-email_address-0-my-widget"
      >
        Email address - No description
      </div>
      <div
        class="mocked-default-widget"
        id="mocked-field-email_subject-1-my-widget"
      >
        Email subject (optional) - No description
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders an object widget component with invalid field in value 1`] = `
<div>
  <div
    className="ui attached tabular menu"
  >
    <a
      className="active item"
      onClick={[Function]}
    >
      Internal
    </a>
    <a
      className="item"
      onClick={[Function]}
    >
      External
    </a>
    <a
      className="item"
      onClick={[Function]}
    >
      Email
    </a>
  </div>
  <div
    className="ui bottom attached segment active tab"
  >
    <div
      className="mocked-default-widget"
      id="mocked-field-internal_link-0-my-widget"
    >
      Internal link
       - 
      No description
    </div>
  </div>
</div>
`;
